Async await API Call

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Export": {
+    "FilePath": "upload/export.json" // relative to the app content root OR use an absolute path
+  }
 }
